Updated file handling in kymograph code.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Kymograph_v1.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Kymograph_v1.ipynb
@@ -44,8 +44,7 @@
     "#### Note: \n",
     " - Really need to time optimize this code. The read/write is killing me at one part...Doesn't cause a problem in the non hdf5 version...\n",
     " - generalize to have any number of trenches/lanes\n",
-    " - Also, a way of handling the metadata would be nice...\n",
-    " - maybe I can replace the background thresholding with otsu's method? other similar things?"
+    " - Also, a way of handling the metadata would be nice..."
    ]
   },
   {
@@ -60,9 +59,8 @@
     "class kymograph:\n",
     "    def __init__(\n",
     "        self,\n",
-    "        input_path,\n",
+    "        input_file_prefix,\n",
     "        output_path,\n",
-    "        temp_path,\n",
     "        all_channels,\n",
     "        trench_len_y,\n",
     "        padding_y,\n",
@@ -85,8 +83,9 @@
     "        TEMP_NOTE: * means should be tuned case by case after checking outputs. ** other change to be made\n",
     "\n",
     "        Args:\n",
-    "            input_path (string): Path to the input hdf5 file.\n",
-    "            output_path (string): Path to write the output file to. Must be within *existing* directories.\n",
+    "            input_file_prefix (string): Path prefix (e.x. \"./folder/fov_\") to the input hdf5 file.\n",
+    "            output_path (string): Directory to write the output file to, this is also where temporary files\n",
+    "            will be written to.\n",
     "            all_channels (list): list of strings corresponding to the different image channels\n",
     "            available in the input hdf5 file, with the channel used for segmenting trenches in\n",
     "            the first position. NOTE: these names must match those of the input hdf5 file datasets.\n",
@@ -122,13 +121,13 @@
     "\n",
     "        \"\"\"\n",
     "\n",
-    "        self.hdf5file = h5py.File(input_path, \"r\")\n",
-    "        self.temp_path = temp_path\n",
-    "        self.writedir(self.temp_path, overwrite=True)\n",
+    "        self.input_file_prefix = input_file_prefix\n",
     "        self.output_path = output_path\n",
+    "        self.temp_dir_prefix = output_path + \"/tempfiles_\"\n",
+    "\n",
     "        self.all_channels = all_channels\n",
     "        self.seg_channel = self.all_channels[0]\n",
-    "        self.y_dim, self.x_dim, self.t_dim = self.hdf5file[self.seg_channel].shape\n",
+    "\n",
     "        if top_and_bottom:\n",
     "            self.top_bottom_list = [\"top\", \"bottom\"]\n",
     "        else:\n",
@@ -169,7 +168,6 @@
     "            overwrite (bool, optional): Whether to overwrite a directory that\n",
     "            already exists in this location.\n",
     "        \"\"\"\n",
-    "        print(directory)\n",
     "        if overwrite:\n",
     "            if os.path.exists(directory):\n",
     "                shutil.rmtree(directory)\n",
@@ -186,40 +184,6 @@
     "        \"\"\"\n",
     "        if os.path.exists(filepath):\n",
     "            os.remove(filepath)\n",
-    "\n",
-    "    def find_background_threshold(\n",
-    "        self, statistic, bins, distance_bin_ratio, backup_percentile\n",
-    "    ):\n",
-    "        \"\"\"Determines an appropriate background threshold by finding a value that seperates the\n",
-    "        two principle populations of values in the signal. It does this by making a histogram\n",
-    "        of the signal, finding the two principle peaks, and taking the least populated value between\n",
-    "        them as the threshold point. If this fails, a simple percentile is used as a backup\n",
-    "        threshold.\n",
-    "\n",
-    "        Args:\n",
-    "            statistic (array): One dimensional input signal.\n",
-    "            bins (int): number of bins to be used in the histogram.\n",
-    "            distance_bin_ratio (float): Tunes the ratio between peak-to-peak distance and\n",
-    "            the resolution of the histogram.\n",
-    "            backup_percentile (int): Backup percentile to be used as the threshold value if\n",
-    "            \"smart\" thresholding fails.\n",
-    "\n",
-    "        Returns:\n",
-    "            float: Threshold value to be used to detect trenches.\n",
-    "        \"\"\"\n",
-    "        histogram_freqs, histogram_values = np.histogram(statistic, bins=bins)\n",
-    "        normalized_distance = int(bins * distance_bin_ratio)\n",
-    "        normalized_height = int(len(statistic) / bins)\n",
-    "        peaks, _ = scipy.signal.find_peaks(\n",
-    "            histogram_freqs, distance=normalized_distance, height=normalized_height\n",
-    "        )\n",
-    "        if len(peaks) > 0:\n",
-    "            background_threshold = histogram_values[\n",
-    "                np.argmin(histogram_freqs[: peaks[-1]])\n",
-    "            ]\n",
-    "        else:\n",
-    "            background_threshold = np.percentile(statistic, backup_percentile, axis=0)\n",
-    "        return background_threshold\n",
     "\n",
     "    def median_filter_1d(self, statistic, kernel):\n",
     "        \"\"\"One-dimensional median filter, with average smoothing at the signal edges.\n",
@@ -734,12 +698,22 @@
     "                )\n",
     "                kymograph_handle.close()\n",
     "\n",
-    "    def generate_kymograph(self):\n",
+    "        self.delete_hdf5(k_mask_handle)\n",
+    "\n",
+    "    def generate_kymograph(self, fov):\n",
     "        \"\"\"Master function for generating kymographs for the target fov. A single hdf5 file is written for the fov\n",
     "        containing datasets of the format top_bottom/channel/trench_k. If nothing is written, this function\n",
     "        returns None.\n",
     "\n",
+    "        fov (int): The particular field of view (fov) to generate kymographs from.\n",
+    "\n",
     "        \"\"\"\n",
+    "        self.writedir(self.output_path, overwrite=False)\n",
+    "        self.temp_path = self.temp_dir_prefix + str(fov) + \"/\"\n",
+    "        self.writedir(self.temp_path, overwrite=True)\n",
+    "        self.hdf5file = h5py.File(self.input_file_prefix + str(fov) + \".hdf5\", \"a\")\n",
+    "        self.y_dim, self.x_dim, self.t_dim = self.hdf5file[self.seg_channel].shape\n",
+    "\n",
     "        imported_hdf5_handle = self.import_hdf5(2, 3, \"imported_hdf5\", \"data\")\n",
     "        all_cropped_in_y_handle = self.crop_trenches_in_y(imported_hdf5_handle)\n",
     "        if all_cropped_in_y_handle is None:\n",
@@ -755,7 +729,10 @@
     "                    all_cropped_in_y_handle, top_bottom, i, all_midpoints, x_drift\n",
     "                )\n",
     "        output_file_path = self.temp_path + \"output.hdf5\"\n",
-    "        os.rename(output_file_path, self.output_path)\n",
+    "        os.rename(output_file_path, self.output_path + \"/kymo_\" + str(fov) + \".hdf5\")\n",
+    "        self.delete_hdf5(all_cropped_in_y_handle)\n",
+    "        self.delete_hdf5(imported_hdf5_handle)\n",
+    "        shutil.rmtree(self.temp_path)\n",
     "\n",
     "    def plot_kymograph(self, kymograph):\n",
     "        \"\"\"Helper function for plotting kymographs. Takes a kymograph array of shape (y_dim,x_dim,t_dim).\n",
@@ -774,15 +751,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/tiff_extraction/test_out_4/fov_70.hdf5\"\n",
-    "temp_path = \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/kymographs/tempfiles/\"\n",
-    "output_path = (\n",
-    "    \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/kymographs/test_output.hdf5\"\n",
+    "input_file_prefix = (\n",
+    "    \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/tiff_extraction/test_out_4/fov_\"\n",
     ")\n",
+    "output_path = \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/kymographs_3\"\n",
     "kymo = kymograph(\n",
-    "    input_path,\n",
+    "    input_file_prefix,\n",
     "    output_path,\n",
-    "    temp_path,\n",
     "    [\"channel_BF\", \"channel_RFP\"],\n",
     "    270,\n",
     "    20,\n",
@@ -797,7 +772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymographs = kymo.generate_kymograph()"
+    "kymographs = kymo.generate_kymograph(71)"
    ]
   },
   {
@@ -807,7 +782,7 @@
    "outputs": [],
    "source": [
     "data = h5py.File(\n",
-    "    \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/kymographs/test_output.hdf5\"\n",
+    "    \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/kymographs_3/kymo_71.hdf5\"\n",
     ")"
    ]
   },
