--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Kymograph_cluster.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Kymograph_cluster.ipynb
@@ -110,30 +110,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "kymo_controller.daskcluster.stop_all_jobs()  # this seems to work"
+    "kymo_controller.shutdown()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
