--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Kymograph_cluster.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Kymograph_cluster.ipynb
@@ -13,11 +13,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
-    "import warnings\n",
-    "\n",
-    "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
-    "warnings.filterwarnings(action=\"once\")"
+    "import trenchripper as tr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Start Dask"
    ]
   },
   {
@@ -26,7 +29,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import trenchripper as tr"
+    "kymo_controller = tr.cluster.dask_controller(\n",
+    "    walltime=\"04:00:00\", local=False, n_workers=40, memory=\"2GB\"\n",
+    ")\n",
+    "kymo_controller.startdask()\n",
+    "kymo_controller.daskcluster.start_workers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.daskclient"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Perform Extraction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(\n",
+    "    \"/n/scratch2/de64/for_sylvia/Bacillus_revival_12_7_2020.nd2\",\n",
+    "    \"/n/scratch2/de64/full_pipeline_test/hdf5\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymo_controller.mapfovs(hdf5_extractor.extract_fov, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "props = kymo_controller.daskclient.gather(\n",
+    "    kymo_controller.futures\n",
+    ")  # this will hang until all futures are done"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Generate Kymographs"
    ]
   },
   {
@@ -69,28 +131,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"00:30:00\", local=False, n_workers=30, memory=\"2GB\"\n",
-    ")\n",
-    "kymo_controller.startdask()\n",
-    "kymo_controller.daskcluster.start_workers()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymo_controller.daskclient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "kymo_controller.mapfovs(kymo.generate_kymograph, 30)"
    ]
   },
@@ -106,11 +146,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### End Dask, Cancel Jobs"
+   ]
   },
   {
    "cell_type": "code",
