--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/hdf5_extraction_v1.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/hdf5_extraction_v1.ipynb
@@ -51,6 +51,16 @@
     "    def __init__(self, nd2filename, hdf5path):\n",
     "        self.nd2filename = nd2filename\n",
     "        self.hdf5path = hdf5path\n",
+    "        self.writedir(hdf5path)\n",
+    "\n",
+    "    def writedir(self, directory, overwrite=False):\n",
+    "        if overwrite:\n",
+    "            if os.path.exists(directory):\n",
+    "                shutil.rmtree(directory)\n",
+    "            os.makedirs(directory)\n",
+    "        else:\n",
+    "            if not os.path.exists(directory):\n",
+    "                os.makedirs(directory)\n",
     "\n",
     "    def extract_fov(self, fovnum):\n",
     "        nd2file = ND2Reader(self.nd2filename)\n",
@@ -63,9 +73,13 @@
     "                x_dim = metadata[\"width\"]\n",
     "                t_dim = len(nd2file.metadata[\"frames\"])\n",
     "                hdf5_dataset = h5pyfile.create_dataset(\n",
-    "                    \"channel_\" + str(channel), (x_dim, y_dim, t_dim), dtype=\"uint16\"\n",
+    "                    \"channel_\" + str(channel),\n",
+    "                    (x_dim, y_dim, t_dim),\n",
+    "                    chunks=(x_dim, y_dim, 1),\n",
+    "                    dtype=\"uint16\",\n",
     "                )\n",
     "                for frame in nd2file.metadata[\"frames\"]:\n",
+    "                    print(frame)\n",
     "                    nd2_image = nd2file.get_frame_2D(c=i, t=frame, v=fovnum)\n",
     "                    hdf5_dataset[:, :, int(frame)] = nd2_image\n",
     "        nd2file.close()\n",
@@ -97,6 +111,37 @@
     "                nd2_image = nd2file.get_frame_2D(c=i, t=frame, v=fovnum)\n",
     "                imsave(filepath, nd2_image)\n",
     "        nd2file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdf5_extractor = hdf5_fov_extractor(\n",
+    "    \"/n/scratch2/de64/for_sylvia/Bacillus_revival_12_7_2020.nd2\",\n",
+    "    \"/n/scratch2/de64/full_pipeline_test/hdf5\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hdf5_extractor.extract_fov(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext line_profiler\n",
+    "%lprun -f hdf5_extractor.extract_fov hdf5_extractor.extract_fov(1)"
    ]
   },
   {
