--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
@@ -41,6 +41,135 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import h5py\n",
+    "import numpy as np\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(7, 11):\n",
+    "    print(2**i)\n",
+    "    with h5py.File(\"/n/scratch2/de64/test_\" + str(i) + \".hdf5\", \"a\") as outfile:\n",
+    "        outfile.create_dataset(\n",
+    "            \"data\", (2048, 2048, 300), chunks=(2**i, 2**i, 1), dtype=\"uint16\"\n",
+    "        )\n",
+    "        for j in range(3):\n",
+    "            array = np.ones((2048, 2048, 100), dtype=\"uint16\")\n",
+    "            outfile[\"data\"][:, :, (100 * j) : (100 * j) + 100] = array\n",
+    "    infile = h5py.File(\"/n/scratch2/de64/test_\" + str(i) + \".hdf5\", \"r\")\n",
+    "    dataset = infile[\"data\"]\n",
+    "    t1 = time.time()\n",
+    "    testarr = dataset[:, :, 0:300:100]\n",
+    "    t2 = time.time()\n",
+    "    print(t2 - t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(0, 4):\n",
+    "    print(2**i)\n",
+    "    with h5py.File(\"/n/scratch2/de64/test_\" + str(i) + \".hdf5\", \"a\") as outfile:\n",
+    "        outfile.create_dataset(\n",
+    "            \"data\", (2048, 2048, 300), chunks=(256, 256, 2**i), dtype=\"uint16\"\n",
+    "        )\n",
+    "        for j in range(3):\n",
+    "            array = np.ones((2048, 2048, 100), dtype=\"uint16\")\n",
+    "            outfile[\"data\"][:, :, (100 * j) : (100 * j) + 100] = array\n",
+    "    infile = h5py.File(\"/n/scratch2/de64/test_\" + str(i) + \".hdf5\", \"r\")\n",
+    "    dataset = infile[\"data\"]\n",
+    "    t1 = time.time()\n",
+    "    testarr = dataset[:, :, 0:300:100]\n",
+    "    t2 = time.time()\n",
+    "    print(t2 - t1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infile = h5py.File(\"/n/scratch2/de64/test_7.hdf5\", \"r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2048 / 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = infile[\"data\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testarr = dataset[:, :, 0:700:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testarr.nbytes"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -72,14 +201,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path_prefix = (\n",
-    "    \"/n/groups/paulsson/Daniel/Image_analysis_pipeline/tiff_extraction/test_out_4/fov_\"\n",
-    ")\n",
+    "# input_path_prefix = '/n/groups/paulsson/Daniel/Image_analysis_pipeline/tiff_extraction/test_out_4/fov_'\n",
+    "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[64,12,32,45],t_subsample_step=5)\n",
+    "# imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
+    "input_path_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
     "kymo = tr.interactive.kymograph_interactive(\n",
-    "    input_path_prefix,\n",
-    "    [\"channel_BF\", \"channel_RFP\"],\n",
-    "    [64, 12, 32, 45],\n",
-    "    t_subsample_step=5,\n",
+    "    input_path_prefix, [\"channel_BF\"], [1, 2, 3, 4], t_subsample_step=200\n",
     ")\n",
     "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)"
    ]
@@ -221,10 +348,10 @@
    "outputs": [],
    "source": [
     "triangle_nbins = 50\n",
-    "triangle_scaling = 1.1\n",
+    "triangle_scaling = 1.3\n",
     "y_min_edge_dist = 50\n",
-    "padding_y = 20\n",
-    "trench_len_y = 270\n",
+    "padding_y = 40\n",
+    "trench_len_y = 130\n",
     "top_orientation = 0\n",
     "\n",
     "trench_edges_y_lists = kymo.map_to_fovs(\n",
@@ -422,6 +549,13 @@
     "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
