Rename janelle to lab-helper, added first cut of group meeting scheduling utilities.

--- a/paulssonlab/src/paulssonlab/shenker/lab-helper/180518 Prototyping.ipynb
+++ b/paulssonlab/src/paulssonlab/shenker/lab-helper/180518 Prototyping.ipynb
@@ -335,7 +335,7 @@
     "    name: hv.Curve(d.reset_index().values)\n",
     "    .redim(x=\"date\", y=\"days\")\n",
     "    .options(tools=[\"hover\"])\n",
-    "    for name, d in durs2.iteritems()\n",
+    "    for name, d in dur_days.iteritems()\n",
     "}\n",
     "hv.NdOverlay(obj).redim(Element=\"name\").options(width=900)"
    ]
@@ -406,7 +406,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
